<resources>
    <string name="app_name">Shopping List</string>
    <string name="action_settings">About</string>
    <string name="enter_item">Enter Item</string>
    <string name="h_enter_item">enter item</string>
    <string name="h_enter_qty">enter quantity</string>
    <string name="save_btn">Save</string>
    <string name="update_text">Update</string>
    <string name="no_items">No items saved in the list, please start adding.</string>
    <string name="btn_item_saved">Item saved</string>
    <string name="btn_fill_fields">Fill all the fields!</string>
    <string name="about_text">\n\n Simple shopping list application.
        \n Save the desired items you want in the comfort of your home and delete them as you purchase the items in the shop.
        Quick and easy.
        \n\n
        Made with care by: \n\n mirodone.ro</string>
    <string name="tx_web" translatable="false">www.mirodone.ro</string>
    <string name="dialog_question">Are you sure ?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="tv_item_text">Item:</string>
    <string name="tv_item_qty">Quantity:</string>
    <string name="add_item_text">Add Item</string>
</resources>
