<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="15sp"
                android:textStyle="italic" />

        <EditText
            android:id="@+id/babyItem"
            android:layout_below="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/h_enter_item"
            />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_below="@id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/h_enter_qty"
                />

            <Button
                android:id="@+id/btn_save"
                android:layout_below="@id/itemQuantity"
                android:layout_marginEnd="5dp"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:background="@color/colorAccent"
                android:text="@string/save_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>