<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="1dp"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="10dp"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            >

            <TextView
                android:id="@+id/tv_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="3dp"
                android:textSize="12sp"
                android:text="@string/tv_item_text"
                />


            <TextView
                android:id="@+id/list_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_item"
                android:text="@string/app_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_qty"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item"
                android:textSize="12sp"
                android:text="@string/tv_item_qty"
                />

            <TextView
                android:id="@+id/list_item_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/list_item_name"
                android:layout_toEndOf="@id/tv_qty"
                android:text="@string/app_name"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/list_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/list_item_qty"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/list_item_date"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_menu_edit"
                    style="?android:attr/borderlessButtonStyle"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_delete"
                    style="?android:attr/borderlessButtonStyle"/>


            </TableRow>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>